[package]
name = "quic-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls-pemfile = "2.2.0"
quinn = { version = "0.11.3" }
tokio = { version = "1.28.1", features = ["full"] }
rustls = { version = "0.23.16", features = ["ring"] }
anyhow = "1.0.22"
quinn-proto = "0.11.8"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = [
    "std-future",
] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }

[features]
default = ["runtime-tokio"]
runtime-tokio = []
